ghost-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-cluster
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
    - port: 2368
      targetPort: 2368
