ingress-kube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - {your-domain}
    secretName: {your-domain}
  rules:
  - host: {your-domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ghost-cluster
            port:
              number: 2368
